rns-lang/tests/snapshots/rns_warn-class_directive-multiple_access_flags.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class public final EmptyClass
.super java/lang/Object

.end class
----- INPUT -----
.class public public final public EmptyClass
.super java/lang/Object

.end class
----- STDERR -----
[W002] Warning: duplicate access flag 'public' in class declaration
   ╭─[ test_data/integration/rns_warn/class_directive/multiple_access_flags.ja:1:15 ]
   │
 1 │ .class public public final public EmptyClass
   │        ───┬── ───┬──       ───┬──  
   │           ╰──────────────────────── first defined here
   │                  │            │    
   │                  ╰───────────────── duplicate flag ignored here
   │                               │    
   │                               ╰──── duplicate flag ignored here
   │ 
   │ Note: The `public` flag was already specified. You only need to declare it once.
───╯
----- HASH -----
15660cc72b14de356de78864cb002c7909cd787fae77332babaf3fb942963ddc
